panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__relational-ops__test_char_sign_extend.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/relational-ops/test_char_sign_extend.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/relational-ops/test_char_sign_extend.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration c~2 `char` 128)
         (declaration x~3 `unsigned int` 200)
         (return (add (less (name c~2 `char`) 0) (greater (name c~2 `char`) (name x~3 `unsigned int`)))))))

----- stderr -----
