panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__relational-ops__test_int_compare.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/relational-ops/test_int_compare.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/relational-ops/test_int_compare.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `int` 42)
         (declaration b~3 `int` 27)
         (return (add (less (name a~2 `int`) (add (name a~2 `int`) (name b~3 `int`))) (greater (name a~2 `int`) (name b~3 `int`)))))))

----- stderr -----
