panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__relational-ops__test_long_compare.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/relational-ops/test_long_compare.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/relational-ops/test_long_compare.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration i1~2 `int` 42)
         (declaration i2~3 `int` 27)
         (declaration p1~4 `long` 5)
         (declaration p2~5 `long` 6)
         (return (add (add (add (not-equal (name p1~4 `long`) (name i1~2 `int`)) (not-equal (name p2~5 `long`) (name i2~3 `int`))) (equal (add (name p1~4 `long`) 1) (name p2~5 `long`))) (equal (subtract (name p2~5 `long`) 1) (name p1~4 `long`)))))))

----- stderr -----
