panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__relational-ops__test_signed_greater_equal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/relational-ops/test_signed_greater_equal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/relational-ops/test_signed_greater_equal.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (return (greater-equal 42 42)))))

----- stderr -----
