panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__relational-ops__test_unsigned_greater.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/relational-ops/test_unsigned_greater.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/relational-ops/test_unsigned_greater.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `unsigned int` 42)
         (declaration b~3 `unsigned int` 27)
         (return (add (greater-equal (name a~2 `unsigned int`) (name b~3 `unsigned int`)) (greater-equal (name a~2 `unsigned int`) (name a~2 `unsigned int`)))))))

----- stderr -----
